unpackaged/main/default/objects/Lease_Credit_Review__c/Lease_Credit_Review__c.object-meta.xml
<CustomObject>
    <label>Lease Credit Review</label>
    <nameField>
        <displayFormat>FL-{0000}</displayFormat>
        <label>Lease Credit Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Credit Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>