unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>Legal name of the lease applicant.</description>
    <formula>Opportunity__r.Legal_Name__c</formula>
    <inlineHelpText>Legal name of the lease applicant.</inlineHelpText>
    <label>Applicant</label>
    <type>Text</type>
</CustomField>