unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>This field will contain the lease application number.</description>
    <formula>Name</formula>
    <inlineHelpText>This field will contain the lease application number.</inlineHelpText>
    <label>Application #</label>
    <type>Text</type>
</CustomField>