unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>This field will indicate the approval date of the lease.</description>
    <inlineHelpText>This field will indicate the approval date of the lease.</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>