unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approval_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter_Email__c</fullName>
    <label>Approval Submitter Email</label>
    <type>Email</type>
</CustomField>