unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Lease approval Amount.</description>
    <inlineHelpText>Lease approval Amount.</inlineHelpText>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>