unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>