unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approved_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Approved_Physical_Address__c</fullName>
    <label>Approved Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>