unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Approved_Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Approved_Physical_City__c</fullName>
    <label>Approved Physical City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>