unpackaged/main/default/objects/Lease_Credit_Review__c/fields/BNI_Score__c.field-meta.xml
<CustomField>
    <fullName>BNI_Score__c</fullName>
    <label>BNI Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>