unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Bus_Name_Search__c.field-meta.xml
<CustomField>
    <fullName>Bus_Name_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bus. Name Search</label>
    <type>Checkbox</type>
</CustomField>