unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the credit processor has verified the business license for the company.</description>
    <inlineHelpText>Check the box if the business license for the company has been verified.</inlineHelpText>
    <label>Business License</label>
    <type>Checkbox</type>
</CustomField>