unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Comp_Credit_Level__c.field-meta.xml
<CustomField>
    <fullName>Comp_Credit_Level__c</fullName>
    <label>Comp Credit Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>