unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Comp_Credit_Level_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Comp_Credit_Level_Guidelines__c</fullName>
    <description>This field will represent the amount of comparable credit that a company has taken out.</description>
    <inlineHelpText>This field will represent the amount of comparable credit that a company has taken out.</inlineHelpText>
    <label>Comp Credit Level (Guidelines)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100,000</fullName>
            </value>
            <value>
                <fullName>75,000</fullName>
            </value>
            <value>
                <fullName>50,000</fullName>
            </value>
            <value>
                <fullName>25,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>