unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Company_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_DBA__c</fullName>
    <description>DBA name of the lease applicant.</description>
    <formula>Opportunity__r.Company_DBA__c</formula>
    <inlineHelpText>DBA name of the lease applicant.</inlineHelpText>
    <label>Company DBA</label>
    <type>Text</type>
</CustomField>