unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <description>This formula will display the Opportunity's Credit Analyst.</description>
    <formula>Opportunity__r.Credit_Analyst__r.Full_Name__c</formula>
    <inlineHelpText>This formula will display the Opportunity's Credit Analyst.</inlineHelpText>
    <label>Credit Analyst</label>
    <type>Text</type>
</CustomField>