unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Credit_Decision__c.field-meta.xml
<CustomField>
    <fullName>Credit_Decision__c</fullName>
    <description>This field will indicate if the transaction has been approved.</description>
    <inlineHelpText>This field will indicate if the transaction has been approved.</inlineHelpText>
    <label>Credit Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>