unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Credit_net_Manta__c.field-meta.xml
<CustomField>
    <fullName>Credit_net_Manta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that a company listing on Credit.net or Manta has been found.</description>
    <inlineHelpText>This field will indicate that a company listing on Credit.net or Manta has been found.</inlineHelpText>
    <label>Credit.net / Manta</label>
    <type>Checkbox</type>
</CustomField>