unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Credit_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Processor__c</fullName>
    <description>This formula will display the Opportunity's Credit Processor.</description>
    <formula>Opportunity__r.Credit_Processor__r.Full_Name__c</formula>
    <inlineHelpText>This formula will display the Opportunity's Credit Processor.</inlineHelpText>
    <label>Credit Processor</label>
    <type>Text</type>
</CustomField>