unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Credit_Tier__c.field-meta.xml
<CustomField>
    <fullName>Credit_Tier__c</fullName>
    <description>This field will indicate what tier the lessee has been approved at.</description>
    <inlineHelpText>This field will indicate what tier the lessee has been approved at.</inlineHelpText>
    <label>Credit Tier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Credit_Decision__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5 - Start Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>