unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Current_Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Current_Physical_State__c</fullName>
    <description>Physical State</description>
    <formula>Opportunity__r.Physical_Address_State__c</formula>
    <inlineHelpText>Physical State</inlineHelpText>
    <label>Current Physical State</label>
    <type>Text</type>
</CustomField>