unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Current_Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Current_Physical_Zip__c</fullName>
    <description>Physical Zip</description>
    <formula>Opportunity__r.Physical_Address_Zip__c</formula>
    <inlineHelpText>Physical Zip</inlineHelpText>
    <label>Current Physical Zip</label>
    <type>Text</type>
</CustomField>