unpackaged/main/default/objects/Lease_Credit_Review__c/fields/D_B_Risk__c.field-meta.xml
<CustomField>
    <fullName>D_B_Risk__c</fullName>
    <label>D&amp;B Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Medium High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>