unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Decline_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reasons__c</fullName>
    <label>Decline Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient time in business</fullName>
            </value>
            <value>
                <fullName>Lack of Personal Guarantees</fullName>
            </value>
            <value>
                <fullName>Insufficient bank history/balance</fullName>
            </value>
            <value>
                <fullName>Limited or Delinquent credit obligations</fullName>
            </value>
            <value>
                <fullName>Excessive debt obligations</fullName>
            </value>
            <value>
                <fullName>Serious derogatory items</fullName>
            </value>
            <value>
                <fullName>Unconfirmed Documents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>