unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Declined_By__c.field-meta.xml
<CustomField>
    <fullName>Declined_By__c</fullName>
    <label>Declined By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>