unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>