unpackaged/main/default/objects/Lease_Credit_Review__c/fields/EFA__c.field-meta.xml
<CustomField>
    <fullName>EFA__c</fullName>
    <label>EFA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Tax</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>