unpackaged/main/default/objects/Lease_Credit_Review__c/fields/EQF_Revolving_Available_Actual__c.field-meta.xml
<CustomField>
    <fullName>EQF_Revolving_Available_Actual__c</fullName>
    <label>EQF Revolving Available % (Guidelines)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>35-40%</fullName>
            </value>
            <value>
                <fullName>35%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>