unpackaged/main/default/objects/Lease_Credit_Review__c/fields/EXP_Credit_Score_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>EXP_Credit_Score_Guidelines__c</fullName>
    <label>EXP Credit Score (Guidelines)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>670</fullName>
            </value>
            <value>
                <fullName>650</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>