unpackaged/main/default/objects/Lease_Credit_Review__c/fields/EXP_Revolving_Available_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>EXP_Revolving_Available_Guidelines__c</fullName>
    <label>EXP Revolving % Available (Guidelines)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>35%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>