unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Experian_Biz_Score__c.field-meta.xml
<CustomField>
    <fullName>Experian_Biz_Score__c</fullName>
    <label>Experian Biz Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>