unpackaged/main/default/objects/Lease_Credit_Review__c/fields/FMV__c.field-meta.xml
<CustomField>
    <fullName>FMV__c</fullName>
    <label>FMV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Gross Receipts</fullName>
            </value>
            <value>
                <fullName>No Tax</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>