unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Guarantees_Required__c.field-meta.xml
<CustomField>
    <fullName>Guarantees_Required__c</fullName>
    <description>Names of the guarantors required.</description>
    <inlineHelpText>Names of the guarantors required.</inlineHelpText>
    <label>Guarantees Required</label>
    <type>TextArea</type>
</CustomField>