unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Name_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the credit processor has verified the name of the company.</description>
    <inlineHelpText>Check the box if the name of the company has been verified.</inlineHelpText>
    <label>Name Verified</label>
    <type>Checkbox</type>
</CustomField>