unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Paydex__c.field-meta.xml
<CustomField>
    <fullName>Paydex__c</fullName>
    <description>This field will contain the Paydex score of the business.</description>
    <inlineHelpText>This field will contain the Paydex score of the business.</inlineHelpText>
    <label>Paydex</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>