unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Pended_By__c.field-meta.xml
<CustomField>
    <fullName>Pended_By__c</fullName>
    <label>Pended By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>