unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Pended_Date__c.field-meta.xml
<CustomField>
    <fullName>Pended_Date__c</fullName>
    <label>Pended Date</label>
    <type>DateTime</type>
</CustomField>