unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_1_EQF_Date__c.field-meta.xml
<CustomField>
    <fullName>PG_1_EQF_Date__c</fullName>
    <inlineHelpText>Date PG 1's Equifax Credit Score was pulled.</inlineHelpText>
    <label>PG 1 - EQF Date</label>
    <type>Date</type>
</CustomField>