unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_1_EQF_Revolving_Available__c.field-meta.xml
<CustomField>
    <fullName>PG_1_EQF_Revolving_Available__c</fullName>
    <description>PG 1's Revolving % available from Equifax.</description>
    <inlineHelpText>PG 1's Revolving % available from Equifax.</inlineHelpText>
    <label>PG 1 - EQF Revolving % Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>