unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_1_EXP_BKR_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_1_EXP_BKR_Score__c</fullName>
    <description>PG 1 Bankruptcy Risk Score</description>
    <inlineHelpText>Enter PG 1's Bankruptcy Risk Score from Experian</inlineHelpText>
    <label>PG 1 - EXP BKR Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>