unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_1_Signor__c.field-meta.xml
<CustomField>
    <fullName>PG_1_Signor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lease Credit Reviews</relationshipLabel>
    <relationshipName>Lease_Credit_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>