unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_2_EQF_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_2_EQF_Credit_Score__c</fullName>
    <description>PG 2 Equifax Credit Score</description>
    <inlineHelpText>Enter PG 2's Equifax Credit Score</inlineHelpText>
    <label>PG 2 - EQF Credit Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>