unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_2_EXP_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_2_EXP_Credit_Score__c</fullName>
    <description>PG 1 Experian Credit Score</description>
    <inlineHelpText>Enter PG 1's Experian Credit Score</inlineHelpText>
    <label>PG 2 - EXP Credit Score</label>
    <length>3</length>
    <type>Text</type>
</CustomField>