unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_2_Judgement_Amount__c.field-meta.xml
<CustomField>
    <fullName>PG_2_Judgement_Amount__c</fullName>
    <description>This field will capture the amount of a judgement levied against PG #2</description>
    <inlineHelpText>This field will capture the amount of a judgement levied against PG #2</inlineHelpText>
    <label>PG 2 Judgement Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>