unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_2_Open_Tax_Liens__c.field-meta.xml
<CustomField>
    <fullName>PG_2_Open_Tax_Liens__c</fullName>
    <description>This field will indicate if PG #2 has open tax liens.</description>
    <inlineHelpText>This field will indicate if PG #2 has open tax liens.</inlineHelpText>
    <label>PG 2 Open Tax Liens</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>