unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_2_Open_Tax_Liens_Curr__c.field-meta.xml
<CustomField>
    <fullName>PG_2_Open_Tax_Liens_Curr__c</fullName>
    <description>This field will indicate the amount of the open tax liens levied on PG #2.</description>
    <inlineHelpText>This field will indicate the amount of the open tax liens levied on PG #2.</inlineHelpText>
    <label>PG 2 Open Tax Liens ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>