unpackaged/main/default/objects/Lease_Credit_Review__c/fields/PG_Name_Search__c.field-meta.xml
<CustomField>
    <fullName>PG_Name_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will indicate if the Credit Processor has searched the database for other WC transactions a customer has been / is involved in. The box will contain a check if the action has been completed regardless of the PG(s)' involvement.</description>
    <inlineHelpText>Check the box to indicate that the PG Name Search has been completed (outcome regardless).</inlineHelpText>
    <label>PG Name Search</label>
    <type>Checkbox</type>
</CustomField>