unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Prefunding_Terms__c.field-meta.xml
<CustomField>
    <fullName>Prefunding_Terms__c</fullName>
    <label>Prefunding Terms</label>
    <type>TextArea</type>
</CustomField>