unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Projected_Portfolio_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Projected_Portfolio_Assignment__c</fullName>
    <description>This field will capture the credit analysts projection of what lender will ultimately hold the lease/financing transaction once the deal has funded.</description>
    <inlineHelpText>Please select the option that the credit analyst projects as the portfolio that will hold the lease/finance agreement.</inlineHelpText>
    <label>Projected Portfolio Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>National Funding</fullName>
            </value>
            <value>
                <fullName>Portfolio Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>