unpackaged/main/default/objects/Lease_Credit_Review__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>