unpackaged/main/default/objects/Lease_Credit_Review__c/fields/SIC_Name__c.field-meta.xml
<CustomField>
    <fullName>SIC_Name__c</fullName>
    <label>SIC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>