unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Submit_to_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Analyst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will trigger a workflow that will send an email to notify the credit analysts that a deal is ready to be processed.  It will not be present on the page layout.</description>
    <inlineHelpText>This box will trigger a workflow that will send an email to notify the credit analysts that a deal is ready to be processed.  It will not be present on the page layout.</inlineHelpText>
    <label>Submit to Analyst</label>
    <type>Checkbox</type>
</CustomField>