unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>This field will indicate the tax rate associated with an approval.</description>
    <inlineHelpText>This field will indicate the tax rate associated with an approval.</inlineHelpText>
    <label>Tax Rate %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>