unpackaged/main/default/objects/Lease_Credit_Review__c/fields/TIB_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>TIB_Guidelines__c</fullName>
    <label>TIB (Guidelines)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Years +</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>