unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Titling_Attachment_Required__c.field-meta.xml
<CustomField>
    <fullName>Titling_Attachment_Required__c</fullName>
    <label>&lt;font color='#FF0000'&gt;Titling Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - See Attachments</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>