unpackaged/main/default/objects/Lease_Credit_Review__c/fields/Type_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Equipment__c</fullName>
    <label>Type of Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>