unpackaged/main/default/objects/Lease_Credit_Review__c/validationRules/LCR_Required_Fields_Approval_or_Mgr_Rev.validationRule-meta.xml
<ValidationRule>
    <fullName>LCR_Required_Fields_Approval_or_Mgr_Rev</fullName>
    <active>true</active>
    <description>Upon approval, require that Max Term, Approval Date, Credit Tier, Approved Amount fields are populated.</description>
    <errorConditionFormula>AND(  OR(ISPICKVAL(Credit_Decision__c, "Approved"), ISPICKVAL(Credit_Decision__c, "Manager Review")),
OR(  ISPICKVAL(Credit_Tier__c, ""), DATEVALUE(Approval_Date__c)= NULL, Approved_Amount__c = NULL , ISPICKVAL(Max_Term__c, ""), ISPICKVAL( Titling_Attachment_Required__c , ""), ISPICKVAL(EFA__c, ""),  ISPICKVAL(FMV__c, ""),  ISPICKVAL(Dollar_Put__c, ""),  ISPICKVAL(Titling_Attachment_Required__c, "")))</errorConditionFormula>
    <errorMessage>An approval or manager review requires that the following fields contains values: Max Term, Approval Date, Credit Tier, Approved Amount, Titling Required and Buyout Tax Treatments.</errorMessage>
</ValidationRule>