unpackaged/main/default/objects/Lease_Credit_Review__c/validationRules/LCR_Signing_Authority_Upon_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>LCR_Signing_Authority_Upon_Approval</fullName>
    <active>true</active>
    <description>This validation rule will allow</description>
    <errorConditionFormula>AND(ISPICKVAL(Credit_Decision__c, 'Approved'), 
OR(ISBLANK($User.Equipment_Signing_Authority__c) ,
   $User.Equipment_Signing_Authority__c &lt; Approved_Amount__c))</errorConditionFormula>
    <errorMessage>The approval amount is above your signing authority.  Please submit this Lease Credit Review for approval.  Thank you.</errorMessage>
</ValidationRule>